Rewrote tick calculation code. Added x and y axis labels. Ensured scale after animation ended. Added enter key handler for textboxes and tabIndexes everywhere. Added disabling and enabling of ui for different animation states. Wrote some validation for entered values.

--- a/UniGraphics/MainWindow.xaml
+++ b/UniGraphics/MainWindow.xaml
@@ -13,6 +13,7 @@
     mc:Ignorable="d">
     <Grid Name="mainGrid">
         <Frame
+            IsTabStop="False"
             Name="MainFrame"
             DataContextChanged="MainFrame_DataContextChanged"
             LoadCompleted="MainFrame_LoadCompleted"
