Created error warning window and choosing pivot vertex window. Corrected mistakes in animation help

--- a/UniGraphics/Help/AnimationsHelp.xaml
+++ b/UniGraphics/Help/AnimationsHelp.xaml
@@ -10,7 +10,7 @@
       Title="AnimationsHelp">
     <Grid>
         <ScrollViewer>
-            <StackPanel Margin="10,0,10,0">
+            <StackPanel Margin="10,0,10,0" Height="1000">
                 <Label 
                     FontStyle ="Italic" 
                     Foreground="#99A2F1" 
@@ -29,7 +29,7 @@
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Вхідні дані"/><LineBreak/>
                         <Run Text="Для початку роботи з рухом шестикутника необхідно ввести такі вхідні дані, як:"/>
                         <Run Text="координати лівої верхньої вершини шестикутника X та Y, довжину сторони та кут повороту."/>
-                        <Run Text="Заборонено вводити будь-які символи, літери окрім чисел та крапки."/><LineBreak/>
+                        <Run Text="Заборонено вводити будь-які символи, літери окрім чисел."/><LineBreak/>
                         <Run Text="Допустимі межі вхідних даних:"/><LineBreak/>
                         <Run Text="Координати лівої верхньої вершини X та Y: (-200 000; 200 000)"/><LineBreak/>
                         <Run Text="Довжина сторони: (0; 200 000)"/><LineBreak/>
@@ -41,6 +41,7 @@
                         <Run Text="Також для обертання шестикутника потрібно обрати точку повороту - нею може бути центр шестикутника або одна з його сторін."/>
                         <Run Text="Якщо в якості точки повороту обрано вершину - є можливим вказати яку, за замовчуванням точкою повороту є ліва верхня вершина."/>
                         <Run Text="Після введення усіх даних для здійснення повороту шестикутника натисніть кнопку 'Почати'."/>
+                        <LineBreak/>
                 </TextBlock>
                 <TextBlock
                     Foreground="Black" 
@@ -52,14 +53,19 @@
                     <Run Text="залежить від заданих даних: координат вершини та довжини сторони."/><LineBreak/>
                     <Run Text="При великих значеннях вхідних даних розмір координатної площини також буде великим."/>
                     <Run Text="Розмір визначається як максимальне значення з вхідних даних плюс деяка величина (100 одиниць). "/>
-                    <Run Text="Масштабування задається автоматично."/><LineBreak/>
+                    <Run Text="Масштабування задається автоматично."/>
+                    <LineBreak/>
                 </TextBlock>
                 <TextBlock
                     Foreground="Black" 
                     FontSize="16"
                     TextWrapping="Wrap"
                     TextAlignment="Justify">
-                    <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Можливі проблемні ситуації"/><LineBreak/>
+                    <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Особливості роботи з рухом об'єкта"/><LineBreak/>
+                    <Run Text="При введенні некоректних даних (координат, сторони, кута) поле підсвічується червоним, а також на екрані з'явиться вікно попередження"></Run>
+                    <Run Text="про неправильність введених даних."></Run><LineBreak/>
+                    <Run Text="Під час роботи програми (безпосередньому русі об'єкта) ви не можете змінювати дані. Щоб ввести інші дані натисніть на кнопку 'Зупинити' і об'єкт повернеться в свій початковий стан."></Run>
+                    <Run Text="Після цього вводьте інші дані. Також ви маєте змогу зупинити рух об'єкта на потрібному вам моменті. Для цього натисніть на кнопку 'Пауза'."></Run>
                 </TextBlock>
             </StackPanel>
         </ScrollViewer>
