--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -693,6 +693,7 @@
                 <Button
                     Name="VisualizeButton"
                     Width="249"
+                    FontSize="18"
                     Height="40"
                     Margin="10,290,10,0"
                     VerticalAlignment="Top"
