Some corrections in animation help

--- a/UniGraphics/Help/AnimationsHelp.xaml
+++ b/UniGraphics/Help/AnimationsHelp.xaml
@@ -32,8 +32,8 @@
                         <Run Text="Заборонено вводити будь-які символи, літери окрім чисел."/><LineBreak/>
                         <Run Text="Допустимі межі вхідних даних:"/><LineBreak/>
                         <Run Text="Координати лівої верхньої вершини X та Y: (-200 000; 200 000)"/><LineBreak/>
-                        <Run Text="Довжина сторони: (0; 200 000)"/><LineBreak/>
-                        <Run Text="Кут повороту: (0; 360)"/><LineBreak/>
+                        <Run Text="Довжина сторони: (0; 50 000)"/><LineBreak/>
+                        <Run Text="Кут повороту: (0.01; 360)"/><LineBreak/>
                         <Run Text="Приклад допустимих вхідних даних:"/><LineBreak/>
                         <Run Text="Х: 195, У: 497, сторона: 70, кут: 300"/><LineBreak/>
                         <Run Text="Приклад недопустимих вхідних даних:"/><LineBreak/>
@@ -60,12 +60,13 @@
                     Foreground="Black" 
                     FontSize="16"
                     TextWrapping="Wrap"
-                    TextAlignment="Justify">
+                    TextAlignment="Justify" >
                     <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Особливості роботи з рухом об'єкта"/><LineBreak/>
                     <Run Text="При введенні некоректних даних (координат, сторони, кута) поле підсвічується червоним, а також на екрані з'явиться вікно попередження"></Run>
-                    <Run Text="про неправильність введених даних."></Run><LineBreak/>
-                    <Run Text="Під час роботи програми (безпосередньому русі об'єкта) ви не можете змінювати дані. Щоб ввести інші дані натисніть на кнопку 'Зупинити' і об'єкт повернеться в свій початковий стан."></Run>
+                    <Run Text="про помилку."></Run>
+                    <Run Text="При безпосередньому русі об'єкта ви не можете змінювати дані. Щоб ввести інші дані натисніть на кнопку 'Зупинити' і об'єкт повернеться в свій початковий стан."></Run>
                     <Run Text="Після цього вводьте інші дані. Також ви маєте змогу зупинити рух об'єкта на потрібному вам моменті. Для цього натисніть на кнопку 'Пауза'."></Run>
+                    <Run Text="При обранні в якості центру обертання вершини з'явиться вікно - вкажіть конкретну вершину навколо якої бажаєте обертати об'єкт. Ця вершина підсвітиться червоним."></Run>
                 </TextBlock>
             </StackPanel>
         </ScrollViewer>
