--- a/UniGraphics/Help/AnimationsHelp.xaml
+++ b/UniGraphics/Help/AnimationsHelp.xaml
@@ -66,7 +66,7 @@
                     <Run Text="про помилку."></Run>
                     <Run Text="При безпосередньому русі об'єкта ви не можете змінювати дані. Щоб ввести інші дані натисніть на кнопку 'Зупинити' і об'єкт повернеться в свій початковий стан."></Run>
                     <Run Text="Після цього вводьте інші дані. Також ви маєте змогу зупинити рух об'єкта на потрібному вам моменті. Для цього натисніть на кнопку 'Пауза'."></Run><LineBreak/>
-                    <Run Text="Центр оберту позначений червоною крапкою. При обранні в якості центру обертання вершини з'явиться вікно - вкажіть конкретну вершину навколо якої бажаєте обертати об'єкт. Ця вершина також підсвітиться червоним."></Run>
+                    <Run Text="Центр оберту позначений червоною крапкою. Ви можете його редагувати. При обранні в якості центру обертання вершини з'явиться вікно - вкажіть конкретну вершину навколо якої бажаєте обертати об'єкт. Ця вершина також підсвітиться червоним."></Run>
                 </TextBlock>
             </StackPanel>
         </ScrollViewer>
